# rust-api-axum

./: Cargo.toml  README.md
cli_app/: Cargo.toml
cli_app/src/: main.rs  settings.rs
cli_app/src/api/: v1.rs
cli_app/src/commands/: mod.rs  serve.rs
hello_main/: Cargo.toml
hello_main/src/: main.rs
useful_things/async_rust/: Cargo.toml
useful_things/async_rust/src/: main.rs
useful_things/rust_enums/: Cargo.toml
useful_things/rust_enums/src/: main.rs
useful_things/serialization_and_deserialization/: Cargo.toml
useful_things/serialization_and_deserialization/src/: main.rs
