[package]
name = "hello_main"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
tokio = {version = "1.35.1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0" 
anyhow = "1.0.98"
rand = "0.9.1"
tower-http = {version = "0.6.2", features = ["catch-panic"]}